--- a/boxscore/package.json
+++ b/boxscore/package.json
@@ -16,5 +16,10 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.13",
+    "@types/react": "^18.0.38",
+    "typescript": "^5.0.4"
   }
 }
